--- a/author-active-roadmaps.html
+++ b/author-active-roadmaps.html
@@ -159,8 +159,8 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class="active"><a href="/admin/users"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
-					<li class=""><a href="/admin/users/installations"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="author-draft-roadmaps.html"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
@@ -181,7 +181,7 @@
 
 <div class="page-header">
 	<div class="page-title">
-		<a href="#" class="btn btn-success"><i class="icon-plus"></i> Add RoadMap</a>
+		<a href="author-add-roadmap.html" class="btn btn-success"><i class="icon-plus"></i> Add RoadMap</a>
 	</div>
 </div>
 
@@ -206,7 +206,7 @@
 
 			<tbody>
 				<tr>
-					<td><a href="#">java for noobs</a></td>
+					<td><a href="author-view-roadmap.html">java for noobs</a></td>
 					<td>1.0</td>
 					<td>3</td>
 					<td>10</td>
@@ -214,7 +214,7 @@
 					<td><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></td>
 				</tr>
 				<tr>
-					<td><a href="#">scala for java programmers</a></td>
+					<td><a href="author-view-roadmap.html">scala for java programmers</a></td>
 					<td>1.1</td>
 					<td>5</td>
 					<td>14</td>
