--- a/author-view-roadmap-draft.html
+++ b/author-view-roadmap-draft.html
@@ -159,8 +159,8 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class="active"><a href="/admin/users"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
-					<li class=""><a href="/admin/users/installations"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="author-draft-roadmaps.html"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
@@ -181,7 +181,7 @@
 
 <form role="form" action="#">
 	            <div class="panel panel-default">
-	                <div class="panel-heading"><h6 class="panel-title"><i class="icon-page-break"></i> Add Roadmap</h6></div>
+	                <div class="panel-heading"><h6 class="panel-title"><i class="icon-page-break"></i> Update RoadMap draft</h6></div>
 	                <div class="panel-body">
 
 				        <div class="form-group">
