--- a/author-view-roadmap.html
+++ b/author-view-roadmap.html
@@ -159,8 +159,8 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class="active"><a href="/admin/users"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
-					<li class=""><a href="/admin/users/installations"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="author-draft-roadmaps.html"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
@@ -174,10 +174,28 @@
 
 <div class="page-header">
 	<div class="page-title">
+		<h3>Java for noobs</h3>
+	</div>
+</div>
+
+<div class="page-header">
+	<div class="page-title">
 		&nbsp;
 	</div>
 </div>
 
+
+<div class="page-header">
+	<div class="page-title">
+		<a href="author-edit-roadmap.html" class="btn btn-success"><i class="icon-pencil4"></i> Edit RoadMap</a>
+	</div>
+</div>
+
+<div class="page-header">
+	<div class="page-title">
+		&nbsp;
+	</div>
+</div>
 
 <div class="tabbable page-tabs">
 	<ul class="nav nav-tabs">
