--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class="active"><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
 					<li class=""><a href="author-draft-roadmaps.html"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
@@ -174,52 +174,11 @@
 
 <div class="page-header">
 	<div class="page-title">
-		&nbsp;
+		<h3>Welcome author</h3>
 	</div>
 </div>
 
 
-<div class="page-header">
-	<div class="page-title">
-		<a href="author-add-roadmap.html" class="btn btn-success"><i class="icon-plus"></i> Add RoadMap</a>
-	</div>
-</div>
-
-<div class="page-header">
-	<div class="page-title">
-		&nbsp;
-	</div>
-</div>
-
-<div class="panel panel-default">
-	<div class="panel-heading"><h6 class="panel-title"><i class="icon-table"></i> Draft Roadmaps</h6></div>
-	<div class="datatable">
-		<table class="table">
-			<thead>
-				<th>title</th>
-				<th>version</th>
-				<th>action</th>
-			</thead>
-
-			<tbody>
-				<tr>
-					<td><a href="author-view-roadmap-draft.html">java for experts</a></td>
-					<td>1.0</td>
-					<td><button class="btn btn-primary">Activate</button></td>
-				</tr>
-				<tr>
-					<td><a href="author-view-roadmap-draft.html">R for data sceintists</a></td>
-					<td>1.1</td>
-					<td><button class="btn btn-primary">Activate</button></td>
-				</tr>
-			</tbody>
-
-		</table>
-
-
-
-	</div>
-</div>
 
 <script>
 function unassign(taskID,developerID){
