--- a/author-add-roadmap.html
+++ b/author-add-roadmap.html
@@ -159,8 +159,8 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class="active"><a href="/admin/users"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
-					<li class=""><a href="/admin/users/installations"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="author-draft-roadmaps.html"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
@@ -195,7 +195,7 @@
 								</div>
 
 								<div class="form-group">
-									<a href="#" class="btn btn-success"><i class="icon-plus"></i> Add Step</a>
+									<a href="author-add-roadmap-step.html" class="btn btn-success"><i class="icon-plus"></i> Add Step</a>
 								</div>
 
 
