--- a/author-edit-roadmap.html
+++ b/author-edit-roadmap.html
@@ -159,8 +159,8 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class="active"><a href="/admin/users"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
-					<li class=""><a href="/admin/users/installations"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="author-draft-roadmaps.html"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
