--- a/author-edit-roadmap.html
+++ b/author-edit-roadmap.html
@@ -181,7 +181,7 @@
 
 <form role="form" action="#">
 	            <div class="panel panel-default">
-	                <div class="panel-heading"><h6 class="panel-title"><i class="icon-page-break"></i> Add Roadmap</h6></div>
+	                <div class="panel-heading"><h6 class="panel-title"><i class="icon-page-break"></i> Edit Roadmap</h6></div>
 	                <div class="panel-body">
 
 				        <div class="form-group">
