--- a/author-add-roadmap-step.html
+++ b/author-add-roadmap-step.html
@@ -205,6 +205,11 @@
 								</div>
 
 								<div class="form-group">
+										<label>Excercise:</label>
+										<textarea rows="5" cols="5" class="form-control" placeholder="Describe the hands on excercise for this step"></textarea>
+								</div>
+
+								<div class="form-group">
 				            <label>Test file:</label>
 			            	<input type="text" class="form-control" placeholder="Leave blank for manual code review by the tutor">
 				        </div>
