--- a/author-edit-roadmap.html
+++ b/author-edit-roadmap.html
@@ -207,6 +207,13 @@ http://mongoblog.com/basic/querying-mongo-db
 								</div>
 
 								<div class="form-group">
+										<label>Excercise:</label>
+										<textarea rows="5" cols="5" class="form-control" placeholder="Describe the hands on excercise for this step">You will need to create a basic app skeleton
+Use REST and CRUD 											
+										</textarea>
+								</div>
+
+								<div class="form-group">
 				            <label>Test file:</label>
 			            	<input type="text" class="form-control" placeholder="Leave blank for manual code review by the tutor" value="/test/step1.js">
 				        </div>
