--- a/student-search-roadmaps-results.html
+++ b/student-search-roadmaps-results.html
@@ -13,9 +13,9 @@
 <link href="http://assets.codemill.io/css/londinium-ext.css" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/smoothness/jquery-ui.css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script></head>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/smoothness/jquery-ui.css" />
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script></head>
 <!--
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
@@ -174,9 +174,22 @@
 
 <div class="page-header">
 	<div class="page-title">
-		<h3>Java for noobs</h3>
+		&nbsp;
 	</div>
 </div>
+
+
+<form action="#" class="search-line block" role="form">
+				<span class="subtitle"><i class="icon-search3"></i> Search for Roadmaps</span>
+				<div class="input-group">
+					<div class="search-control">
+						<input type="text" class="form-control autocomplete ui-autocomplete-input" placeholder="What are you looking for?" autocomplete="off"><span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
+					</div>
+					<span class="input-group-btn">
+						<button class="btn btn-primary" type="button">Search</button>
+					</span>
+				</div>
+			</form>
 
 <div class="page-header">
 	<div class="page-title">
@@ -184,152 +197,67 @@
 	</div>
 </div>
 
+<ul class="search-results">
+	                    	<li>
+	                    		<h6><a href="#">java for noobs</a></h6>
+	                    		<a href="#" class="result-url">by Chaim Turkel</a>
+	                    		<p>You will learn basic of java and be able to develop swing applications and also swift...</p>
+	                    	</li>
 
-<div class="page-header">
-	<div class="page-title">
-		<a href="author-edit-roadmap.html" class="btn btn-success"><i class="icon-pencil4"></i> Edit RoadMap</a>
-	</div>
-</div>
+	                    	<li>
+	                    		<h6><a href="#">java for android developers</a></h6>
+	                    		<a href="#" class="result-url">by Yossi Elkrief</a>
+	                    		<p>You will learn java with a lot of android stuff as well</p>
+	                    	</li>
 
-<div class="page-header">
-	<div class="page-title">
-		&nbsp;
-	</div>
-</div>
+	                    	<li>
+	                    		<h6><a href="#">Fusce enim felis, tincidunt sed placerat vel, tincidunt <strong>ipsum</strong> lorem</a></h6>
+	                    		<a href="#" class="result-url">http://themeforest.com</a>
+	                    		<p>Nullam eget varius purus, non elementum ante. Nunc at justo vel dui elementum convallis eu sed nulla. Maecenas <strong>ultrices</strong> dignissim leo at viverra. Maecenas aliquet dignissim leo at viverra. In accumsan nunc quis nunc interdum feugiat. Vestibulum porta...</p>
+	                    	</li>
 
-<div class="tabbable page-tabs">
-	<ul class="nav nav-tabs">
-		<li><a data-toggle="tab" class="active" href="#tutors">tutors</a></li>
-		<li><a data-toggle="tab" href="#students">students</a></li>
-		<li><a data-toggle="tab" href="#graduates">graduates</a></li>
-	</ul>
-	<div class="tab-content">
-		<div class="tab-pane fade active in" id="tutors">
-			<div class="block">
-				<div class="page-header">
-					<div class="page-title">
-						<a href="#" class="btn btn-success"><i class="icon-plus"></i> Invite Tutor</a>
-					</div>
-				</div>
+	                    	<li>
+	                    		<h6><a href="#">Duis eu odio et tellus <strong>ipsum</strong> interdum. Curabitur suscipit</a></h6>
+	                    		<a href="#" class="result-url">http://themeforest.com</a>
+	                    		<p>Duis quis urna velit. Aliquam facilisis congue risus, nec consequat <strong>ultrices</strong> posuere at. Integer eget nisl vitae tortor tempus vulputate. Proin et risus nulla. Proin ante ligula, fringilla nec pellentesque at, tempus ac urna. Mauris vehicula lorem eu...</p>
+	                    	</li>
 
-				<div class="page-header">
-					<div class="page-title">
-						&nbsp;
-					</div>
-				</div>
+	                    	<li>
+	                    		<h6><a href="#">Aenean pharetra pretium tristique. Maecenas <strong>ipsum</strong></a></h6>
+	                    		<a href="#" class="result-url">http://themeforest.com</a>
+	                    		<p>Ut euismod aliquam dui, at dapibus dui vulputate at. Quisque <strong>ultrices</strong> commodo cursus. Duis auctor tempor elit, vel lacinia elit lobortis ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id enim non sapien accumsan tincidunt quis...</p>
+	                    	</li>
 
-				<div class="panel panel-default">
-					<div class="panel-heading"><h6 class="panel-title"><i class="icon-table"></i> Tutors</h6></div>
-					<div class="datatable">
-						<table class="table">
-							<thead>
-								<th>name</th>
-								<th># students</th>
-								<th># graduates</th>
-								<th>ratings</th>
-							</thead>
+	                    	<li>
+	                    		<h6><a href="#">Nullam <strong>ipsum</strong> fringilla est, vitae rutrum dui fringilla in</a></h6>
+	                    		<a href="#" class="result-url">http://themeforest.com</a>
+	                    		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pellentesque <strong>ultrices</strong> a erat elementum ullamcorper. Integer at aliquam nibh, a sagittis velit. Pellentesque dapibus libero sed est sollicitudin, et aliquet mi sodales. Proin fringilla...</p>
+	                    	</li>
 
-							<tbody>
-								<tr>
-									<td><a href="#">Moshe</a></td>
-									<td>3</td>
-									<td>10</td>
-									<td><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></td>
-								</tr>
-								<tr>
-									<td><a href="#">Yonatan</a></td>
-									<td>3</td>
-									<td>10</td>
-									<td><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></td>
-								</tr>
-							</tbody>
+	                    	<li>
+	                    		<h6><a href="#">Curabitur eget <strong>ipsum</strong> eu felis faucibus varius</a></h6>
+	                    		<a href="#" class="result-url">http://themeforest.com</a>
+	                    		<p>Nullam bibendum mauris eget tortor malesuada, eu <strong>ultrices</strong> est tempor. Proin feugiat velit vitae eros accumsan semper. Suspendisse justo sem, interdum sit amet ligula nec, facilisis congue justo. Curabitur consectetur risus ligula, nec mollis ac...</p>
+	                    	</li>
 
-						</table>
+	                    	<li>
+	                    		<h6><a href="#">Nulla eu ligula adipiscing, venenatis <strong>ipsum</strong> non, egestas nibh</a></h6>
+	                    		<a href="#" class="result-url">http://themeforest.com</a>
+	                    		<p>Integer at ante vestibulum, fermentum orci quis, eleifend lorem. Etiam imperdiet lacus vel <strong>ultrices</strong> ultricies, non rhoncus justo condimentum. Fusce venenatis felis sit amet pharetra blandit. Donec et ultricies lacus, eget pharetra lectus varius...</p>
+	                    	</li>
 
+	                    	<li>
+	                    		<h6><a href="#">Donec diam sapien, <strong>ipsum</strong> commodo metus</a></h6>
+	                    		<a href="#" class="result-url">http://themeforest.com</a>
+	                    		<p>Aenean euismod commodo <strong>ultrices</strong> et venenatis. Maecenas dignissim urna urna. Nulla ut sagittis augue. In id est ut nisl imperdiet sollicitudin sit amet sed nisl. Curabitur tempus odio diam. Curabitur eget laoreet lectus. Quisque feugiat...</p>
+	                    	</li>
 
-
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="tab-pane fade" id="students">
-			<div class="block">
-				<div class="panel panel-default">
-					<div class="panel-heading"><h6 class="panel-title"><i class="icon-table"></i> Students</h6></div>
-					<div class="datatable">
-						<table class="table">
-							<thead>
-								<th>name</th>
-								<th>progress</th>
-								<th>tutor</th>
-							</thead>
-
-							<tbody>
-								<tr>
-									<td><a href="#">Eli</a></td>
-									<td>3/5</td>
-									<td><a href="#">Gilad</a></td>
-								</tr>
-								<tr>
-									<td><a href="#">Benny</a></td>
-									<td>4/5</td>
-									<td><a href="#">Iftach</a></td>
-								</tr>
-							</tbody>
-
-						</table>
-
-
-
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="tab-pane fade" id="graduates">
-			<div class="block">
-				<div class="panel panel-default">
-					<div class="panel-heading"><h6 class="panel-title"><i class="icon-table"></i> Graduates</h6></div>
-					<div class="datatable">
-						<table class="table">
-							<thead>
-								<th>name</th>
-								<th>graduated at</th>
-								<th>tutored by</th>
-								<th>roadmap rating</th>
-								<th>tutor rating</th>
-							</thead>
-
-							<tbody>
-								<tr>
-									<td><a href="#">Eli</a></td>
-									<td>2016-07-01</td>
-									<td><a href="#">Gilad</a></td>
-									<td><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></td>
-									<td><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></td>
-
-								</tr>
-								<tr>
-									<td><a href="#">Benny</a></td>
-									<td>2017-01-01</td>
-									<td><a href="#">Yuval</a></td>
-									<td><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></td>
-									<td><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i></td>
-								</tr>
-							</tbody>
-
-						</table>
-
-
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-
+	                    	<li>
+	                    		<h6><a href="#">Maecenas auctor elit ut <strong>ipsum</strong> porta aliquam</a></h6>
+	                    		<a href="#" class="result-url">http://themeforest.com</a>
+	                    		<p>Ut eget eros adipiscing, pharetra tellus vitae, vehicula purus. Curabitur et <strong>ultrices</strong> a turpis mollis euismod et eget erat. Praesent posuere sapien in nulla pellentesque lacinia. Integer quis tellus turpis. Etiam tincidunt nunc eget diam ultrices...</p>
+	                    	</li>
+	                    </ul>
 <script>
 function unassign(taskID,developerID){
 	if(confirm('Are you sure?')){
