--- a/author-edit-roadmap.html
+++ b/author-edit-roadmap.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CodeMill ADMIN</title>
+<title>RoadMapper</title>
 
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/londinium-theme.css" rel="stylesheet" type="text/css">
@@ -140,6 +140,10 @@
 								<!-- <li><a href="/developers"><i class="icon-wrench"></i> Switch to Developers Dashboard</a></li> -->
 
 							<li><a href="/logout"><i class="icon-exit"></i> Logout</a></li>
+							<li><a href="author-index.html"><i class="icon-exit"></i> Authors</a></li>
+							<li><a href="tutor-index.html"><i class="icon-exit"></i> Tutors</a></li>
+							<li><a href="student-index.html"><i class="icon-exit"></i> Students</a></li>
+
 						</ul>
 					</li>
 				</ul>
@@ -209,7 +213,7 @@ http://mongoblog.com/basic/querying-mongo-db
 								<div class="form-group">
 										<label>Excercise:</label>
 										<textarea rows="5" cols="5" class="form-control" placeholder="Describe the hands on excercise for this step">You will need to create a basic app skeleton
-Use REST and CRUD 											
+Use REST and CRUD
 										</textarea>
 								</div>
 
