--- a/tutor-index.html
+++ b/tutor-index.html
@@ -163,7 +163,7 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class="active"><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
 					<li class=""><a href="author-draft-roadmaps.html"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
@@ -178,38 +178,12 @@
 
 <div class="page-header">
 	<div class="page-title">
-		&nbsp;
+		<h3>Welcome tutor</h3>
 	</div>
 </div>
 
 
-<form role="form" action="#">
-	            <div class="panel panel-default">
-	                <div class="panel-heading"><h6 class="panel-title"><i class="icon-page-break"></i> Add Roadmap</h6></div>
-	                <div class="panel-body">
 
-				        <div class="form-group">
-				            <label>Title:</label>
-			            	<input type="text" class="form-control">
-				        </div>
-
-								<div class="form-group">
-										<label>Description:</label>
-										<textarea rows="5" cols="5" class="form-control"></textarea>
-								</div>
-
-								<div class="form-group">
-									<a href="author-add-roadmap-step.html" class="btn btn-success"><i class="icon-plus"></i> Add Step</a>
-								</div>
-
-
-                        <div class="form-actions text-right">
-                        	<input type="submit" value="Create Roadmap" class="btn btn-primary">
-                        </div>
-
-				    </div>
-				</div>
-			</form>
 <script>
 function unassign(taskID,developerID){
 	if(confirm('Are you sure?')){
