--- a/author-add-roadmap-step.html
+++ b/author-add-roadmap-step.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CodeMill ADMIN</title>
+<title>RoadMapper</title>
 
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/londinium-theme.css" rel="stylesheet" type="text/css">
@@ -13,9 +13,9 @@
 <link href="http://assets.codemill.io/css/londinium-ext.css" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/smoothness/jquery-ui.css" />
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script></head>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/smoothness/jquery-ui.css" />
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script></head>
 <!--
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
@@ -140,6 +140,10 @@
 								<!-- <li><a href="/developers"><i class="icon-wrench"></i> Switch to Developers Dashboard</a></li> -->
 
 							<li><a href="/logout"><i class="icon-exit"></i> Logout</a></li>
+							<li><a href="author-index.html"><i class="icon-exit"></i> Authors</a></li>
+							<li><a href="tutor-index.html"><i class="icon-exit"></i> Tutors</a></li>
+							<li><a href="student-index.html"><i class="icon-exit"></i> Students</a></li>
+
 						</ul>
 					</li>
 				</ul>
