--- a/author-view-roadmap.html
+++ b/author-view-roadmap.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CodeMill ADMIN</title>
+<title>RoadMapper</title>
 
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/londinium-theme.css" rel="stylesheet" type="text/css">
@@ -140,6 +140,10 @@
 								<!-- <li><a href="/developers"><i class="icon-wrench"></i> Switch to Developers Dashboard</a></li> -->
 
 							<li><a href="/logout"><i class="icon-exit"></i> Logout</a></li>
+							<li><a href="author-index.html"><i class="icon-exit"></i> Authors</a></li>
+							<li><a href="tutor-index.html"><i class="icon-exit"></i> Tutors</a></li>
+							<li><a href="student-index.html"><i class="icon-exit"></i> Students</a></li>
+
 						</ul>
 					</li>
 				</ul>
