--- a/student-index.html
+++ b/student-index.html
@@ -163,8 +163,8 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class=""><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
-					<li class=""><a href="author-draft-roadmaps.html"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="student-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="student-my-roadmaps.html"><span>My Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
