--- a/student-search-roadmaps.html
+++ b/student-search-roadmaps.html
@@ -163,8 +163,8 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class="active"><a href="author-active-roadmaps.html"><span>Active Roadmaps</span> <i class="icon-people"></i></a></li>
-					<li class=""><a href="author-draft-roadmaps.html"><span>Draft Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="student-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="student-my-roadmaps.html"><span>My Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
@@ -204,13 +204,13 @@
   	<div class="panel-body">
 			<ul class="search-results">
 															<li>
-																<h6><a href="#">java for noobs</a></h6>
+																<h6><a href="student-view-roadmap.html">java for noobs</a></h6>
 																<a href="#" class="result-url">by Chaim Turkel</a>
 																<p>You will learn basic of java and be able to develop swing applications and also swift...</p>
 															</li>
 
 															<li>
-																<h6><a href="#">java for android developers</a></h6>
+																<h6><a href="student-view-roadmap.html">java for android developers</a></h6>
 																<a href="#" class="result-url">by Yossi Elkrief</a>
 																<p>You will learn java with a lot of android stuff as well</p>
 															</li>
@@ -226,13 +226,13 @@
   	<div class="panel-body">
 			<ul class="search-results">
 															<li>
-																<h6><a href="#">java for noobs</a></h6>
+																<h6><a href="student-view-roadmap.html">java for noobs</a></h6>
 																<a href="#" class="result-url">by Chaim Turkel</a>
 																<p>You will learn basic of java and be able to develop swing applications and also swift...</p>
 															</li>
 
 															<li>
-																<h6><a href="#">java for android developers</a></h6>
+																<h6><a href="student-view-roadmap.html">java for android developers</a></h6>
 																<a href="#" class="result-url">by Yossi Elkrief</a>
 																<p>You will learn java with a lot of android stuff as well</p>
 															</li>
