--- a/student-view-roadmap.html
+++ b/student-view-roadmap.html
@@ -176,92 +176,31 @@
 		<!-- Page content -->
 	 	<div class="page-content">
 
-<div class="page-header">
-	<div class="page-title">
-		&nbsp;
-	</div>
-</div>
+			<div class="page-header">
+							<div class="page-title">
+								<h3>Java for noobs <small>by Michael Hollander</small></h3>
+							</div>
 
 
-<form action="#" class="search-line block" role="form">
-				<span class="subtitle"><i class="icon-search3"></i> Search for Roadmaps</span>
-				<div class="input-group">
-					<div class="search-control">
-						<input type="text" class="form-control autocomplete ui-autocomplete-input" placeholder="What are you looking for?" autocomplete="off"><span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
-					</div>
-					<span class="input-group-btn">
-						<button class="btn btn-primary" type="button">Search</button>
-					</span>
-				</div>
-			</form>
+						</div>
 
-<div class="page-header">
-	<div class="page-title">
-		&nbsp;
-	</div>
-</div>
+						<div class="row">
+							<div class="col-lg-8">
+								<div class="block">
+									<ul class="headline-info">
+							<li>Steps: 3</li>
+							<li># Graduates: 187</li>
+							<li># Current students: 16</li>
+							<li># tutos: 16</li>
+							<li>ratings: <i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></li>
+						</ul>
+									<p>In this RoadMap you will learn a lot of java and become ready to work as a junior in any enterprise. This contains basic gui, server side, jdbc and lot of other stuff</p>
 
-<ul class="search-results">
-	                    	<li>
-	                    		<h6><a href="student-view-roadmap.html">java for noobs</a></h6>
-	                    		<a href="#" class="result-url">by Chaim Turkel</a>
-	                    		<p>You will learn basic of java and be able to develop swing applications and also swift...</p>
-	                    	</li>
+									<button class="btn btn-primary">Start RoadMap</button>
+								</div>
 
-	                    	<li>
-	                    		<h6><a href="student-view-roadmap.html">java for android developers</a></h6>
-	                    		<a href="#" class="result-url">by Yossi Elkrief</a>
-	                    		<p>You will learn java with a lot of android stuff as well</p>
-	                    	</li>
-
-	                    	<li>
-	                    		<h6><a href="#">Fusce enim felis, tincidunt sed placerat vel, tincidunt <strong>ipsum</strong> lorem</a></h6>
-	                    		<a href="#" class="result-url">http://themeforest.com</a>
-	                    		<p>Nullam eget varius purus, non elementum ante. Nunc at justo vel dui elementum convallis eu sed nulla. Maecenas <strong>ultrices</strong> dignissim leo at viverra. Maecenas aliquet dignissim leo at viverra. In accumsan nunc quis nunc interdum feugiat. Vestibulum porta...</p>
-	                    	</li>
-
-	                    	<li>
-	                    		<h6><a href="#">Duis eu odio et tellus <strong>ipsum</strong> interdum. Curabitur suscipit</a></h6>
-	                    		<a href="#" class="result-url">http://themeforest.com</a>
-	                    		<p>Duis quis urna velit. Aliquam facilisis congue risus, nec consequat <strong>ultrices</strong> posuere at. Integer eget nisl vitae tortor tempus vulputate. Proin et risus nulla. Proin ante ligula, fringilla nec pellentesque at, tempus ac urna. Mauris vehicula lorem eu...</p>
-	                    	</li>
-
-	                    	<li>
-	                    		<h6><a href="#">Aenean pharetra pretium tristique. Maecenas <strong>ipsum</strong></a></h6>
-	                    		<a href="#" class="result-url">http://themeforest.com</a>
-	                    		<p>Ut euismod aliquam dui, at dapibus dui vulputate at. Quisque <strong>ultrices</strong> commodo cursus. Duis auctor tempor elit, vel lacinia elit lobortis ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id enim non sapien accumsan tincidunt quis...</p>
-	                    	</li>
-
-	                    	<li>
-	                    		<h6><a href="#">Nullam <strong>ipsum</strong> fringilla est, vitae rutrum dui fringilla in</a></h6>
-	                    		<a href="#" class="result-url">http://themeforest.com</a>
-	                    		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pellentesque <strong>ultrices</strong> a erat elementum ullamcorper. Integer at aliquam nibh, a sagittis velit. Pellentesque dapibus libero sed est sollicitudin, et aliquet mi sodales. Proin fringilla...</p>
-	                    	</li>
-
-	                    	<li>
-	                    		<h6><a href="#">Curabitur eget <strong>ipsum</strong> eu felis faucibus varius</a></h6>
-	                    		<a href="#" class="result-url">http://themeforest.com</a>
-	                    		<p>Nullam bibendum mauris eget tortor malesuada, eu <strong>ultrices</strong> est tempor. Proin feugiat velit vitae eros accumsan semper. Suspendisse justo sem, interdum sit amet ligula nec, facilisis congue justo. Curabitur consectetur risus ligula, nec mollis ac...</p>
-	                    	</li>
-
-	                    	<li>
-	                    		<h6><a href="#">Nulla eu ligula adipiscing, venenatis <strong>ipsum</strong> non, egestas nibh</a></h6>
-	                    		<a href="#" class="result-url">http://themeforest.com</a>
-	                    		<p>Integer at ante vestibulum, fermentum orci quis, eleifend lorem. Etiam imperdiet lacus vel <strong>ultrices</strong> ultricies, non rhoncus justo condimentum. Fusce venenatis felis sit amet pharetra blandit. Donec et ultricies lacus, eget pharetra lectus varius...</p>
-	                    	</li>
-
-	                    	<li>
-	                    		<h6><a href="#">Donec diam sapien, <strong>ipsum</strong> commodo metus</a></h6>
-	                    		<a href="#" class="result-url">http://themeforest.com</a>
-	                    		<p>Aenean euismod commodo <strong>ultrices</strong> et venenatis. Maecenas dignissim urna urna. Nulla ut sagittis augue. In id est ut nisl imperdiet sollicitudin sit amet sed nisl. Curabitur tempus odio diam. Curabitur eget laoreet lectus. Quisque feugiat...</p>
-	                    	</li>
-
-	                    	<li>
-	                    		<h6><a href="#">Maecenas auctor elit ut <strong>ipsum</strong> porta aliquam</a></h6>
-	                    		<a href="#" class="result-url">http://themeforest.com</a>
-	                    		<p>Ut eget eros adipiscing, pharetra tellus vitae, vehicula purus. Curabitur et <strong>ultrices</strong> a turpis mollis euismod et eget erat. Praesent posuere sapien in nulla pellentesque lacinia. Integer quis tellus turpis. Etiam tincidunt nunc eget diam ultrices...</p>
-	                    	</li>
-	                    </ul>
+							</div>
+						</div>
 <script>
 function unassign(taskID,developerID){
 	if(confirm('Are you sure?')){
