--- a/student-roadmap-player-pr.html
+++ b/student-roadmap-player-pr.html
@@ -163,8 +163,8 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class="active"><a href="student-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
-					<li class=""><a href="student-my-roadmaps.html"><span>My Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="student-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="student-my-roadmaps.html"><span>My Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
@@ -176,75 +176,86 @@
 		<!-- Page content -->
 	 	<div class="page-content">
 
-<div class="page-header">
-	<div class="page-title">
-		&nbsp;
-	</div>
-</div>
+			<div class="page-header">
+							<div class="page-title">
+								<h3>Java for noobs <small>by Michael Hollander</small></h3>
+							</div>
 
 
-<form action="#" class="search-line block" role="form">
-				<span class="subtitle"><i class="icon-search3"></i> Search for Roadmaps</span>
-				<div class="input-group">
-					<div class="search-control">
-						<input type="text" class="form-control autocomplete ui-autocomplete-input" placeholder="What are you looking for?" autocomplete="off"><span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
+						</div>
+
+						<div class="block">
+							    		<ul class="statistics">
+							    			<li>
+							    				<div class="statistics-info">
+								    				<a href="#" title="" class="bg-success"><i class="icon-user-plus"></i></a>
+								    				<strong>3/5 Steps</strong>
+								    			</div>
+												<div class="progress progress-micro">
+													<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+														<span class="sr-only">60% Complete</span>
+													</div>
+												</div>
+												<span>RoadMap progress</span>
+							    			</li>
+							    		</ul>
+						    		</div>
+
+						<div class="row">
+							<div class="col-lg-2">
+								<div class="sidebar collapse" style="width:100%;">
+									<div class="sidebar-content">
+											<ul class="navigation">
+												<li>
+													<a href="#" class="expand level-open">Intro to java</a>
+													<ul style="display:block">
+														<li><a href="#"Some youtube video</a></li>
+														<li>Some blog post</li>
+														<li>an excercise</li>
+													</ul>
+												</li>
+												<li>
+													<a href="#" class="expand level-open">Swing</a>
+													<ul style="display:block">
+														<li>Some youtube video</li>
+														<li>Some blog post</li>
+														<li>an excercise</li>
+													</ul>
+												</li>
+												<li>
+													<a href="#" class="expand level-open">J2EE</a>
+													<ul style="display:block">
+														<li>Some youtube video</li>
+														<li>Some blog post</li>
+														<li>an excercise</li>
+													</ul>
+												</li>
+											</ul>
+										</div>
+									</div>
+							</div>
+							<div class="col-lg-8">
+								<div>
+									<h4>Excercise time!</h4>
+									<p>Now you need to use all that you learn and build an app skeleton</p>
+									<p>This should contains all the infrastructure discussed and GUI components in swing.</p>
+									<p>Once you're code is commited and pushed, click the send PR button</p>
+								</div>
+								<div>
+									<div class="well">
+		                        <ul class="pager">
+		                            <li class="previous"><a href="student-roadmap-player.html">← Prev</a></li>
+		                            <li class="next"><a href="#">Send PR →</a></li>
+		                        </ul>
+		                    </div>
+								</div>
+							</div>
+							<div class="col-lg-2">
+								<img style="width:100%;" src="whatsappchat.png">
+							</div>
+						</div>
 					</div>
-					<span class="input-group-btn">
-						<a href="student-search-roadmaps-results.html" class="btn btn-primary" >Search</a>
-					</span>
 				</div>
-			</form>
-
-
-
-<div class="col-md-6">
-
-	<div class="panel panel-default">
-  	<div class="panel-heading"><h6 class="panel-title">Most Popular</h6></div>
-  	<div class="panel-body">
-			<ul class="search-results">
-															<li>
-																<h6><a href="student-view-roadmap.html">java for noobs</a></h6>
-																<a href="#" class="result-url">by Chaim Turkel</a>
-																<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
-																<p>You will learn basic of java and be able to develop swing applications and also swift...</p>
-															</li>
-
-															<li>
-																<h6><a href="student-view-roadmap.html">java for android developers</a></h6>
-																<a href="#" class="result-url">by Yossi Elkrief</a>
-																<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
-																<p>You will learn java with a lot of android stuff as well</p>
-															</li>
-														</ul>
-		</div>
-  </div>
-
-
-</div>
-<div class="col-md-6">
-	<div class="panel panel-default">
-  	<div class="panel-heading"><h6 class="panel-title">Latest</h6></div>
-  	<div class="panel-body">
-			<ul class="search-results">
-				<li>
-					<h6><a href="student-view-roadmap.html">java for noobs</a></h6>
-					<a href="#" class="result-url">by Chaim Turkel</a>
-					<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
-					<p>You will learn basic of java and be able to develop swing applications and also swift...</p>
-				</li>
-
-				<li>
-					<h6><a href="student-view-roadmap.html">java for android developers</a></h6>
-					<a href="#" class="result-url">by Yossi Elkrief</a>
-					<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
-					<p>You will learn java with a lot of android stuff as well</p>
-				</li>
-														</ul>
-		</div>
-  </div>
-</div>
-
 <script>
 function unassign(taskID,developerID){
 	if(confirm('Are you sure?')){
