--- a/student-roadmap-player.html
+++ b/student-roadmap-player.html
@@ -203,7 +203,7 @@
 
 						<div class="row">
 							<div class="col-lg-2">
-								<div class="sidebar collapse">
+								<div class="sidebar collapse" style="width:100%;">
 									<div class="sidebar-content">
 											<ul class="navigation">
 												<li>
@@ -242,7 +242,7 @@
 									<div class="well">
 		                        <ul class="pager">
 		                            <li class="previous"><a href="#">← Prev</a></li>
-		                            <li class="next"><a href="#">Next →</a></li>
+		                            <li class="next"><a href="student-roadmap-player-pr.html">Next →</a></li>
 		                        </ul>
 		                    </div>
 								</div>
