--- a/student-search-roadmaps-results.html
+++ b/student-search-roadmaps-results.html
@@ -205,12 +205,15 @@
 	                    	<li>
 	                    		<h6><a href="student-view-roadmap.html">java for noobs</a></h6>
 	                    		<a href="#" class="result-url">by Chaim Turkel</a>
+													<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
+
 	                    		<p>You will learn basic of java and be able to develop swing applications and also swift...</p>
 	                    	</li>
 
 	                    	<li>
 	                    		<h6><a href="student-view-roadmap.html">java for android developers</a></h6>
 	                    		<a href="#" class="result-url">by Yossi Elkrief</a>
+													<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
 	                    		<p>You will learn java with a lot of android stuff as well</p>
 	                    	</li>
 
